@@ -1,3 +1,12 @@
+2007-08-11  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/const.py (VIDEO_PLAYER):
+	Use %PROGRAMFILES% environment variable.
+
+	* gaupol/gtk/agents/preview.py (preview):
+	Catch OSError along with IOError.
+	Use gobject.timeout_add to check process state.
+
 2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/util.py (path_to_uri, uri_to_path):
